bug(search-bar):fix horizontal overflow

--- a/src/sass/components/_nav.scss
+++ b/src/sass/components/_nav.scss
@@ -1,8 +1,7 @@
 .nav__icons {
   flex-grow: 1;
-  padding: 0 1em;
+
   .icon {
-    margin-left: 0.5em;
     font-size: 1.4rem;
 
     &:hover {
